Add create intent REST API
